--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   image_picker: ^0.8.5+3
+  file_picker: ^5.0.0
   permission_handler: ^10.2.0
   flutter:
     sdk: flutter
+  intl: ^0.18.0
   provider: ^6.1.2
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,6 +43,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
+  firebase_storage: 12.3.4
   cloud_firestore: ^5.4.4
   shared_preferences: ^2.3.2
 
